lang/macro/tests/ui/fail/17-invalid-return-type.stderr
error[E0277]: the trait bound `I: liquid_lang::ValidLiquidOutputType` is not satisfied
  --> $DIR/17-invalid-return-type.rs:18:24
   |
18 |         fn noop(&self) -> I {}
   |                        ^^^^ the trait `liquid_lang::ValidLiquidOutputType` is not implemented for `I`
